--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,20 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
-  }
+
+    "env": {
+        "FLASK_ENV": "production"
+    },
+    "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "./static/$1"
+        },
+        {
+            "src": "/templates/(.*)",
+            "dest": "./templates/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/$1"
+        }
+    ]
+}
