--- a/vercel.json
+++ b/vercel.json
@@ -5,16 +5,13 @@
     },
     "routes": [
         {
-            "src": "/static/(.*)",
-            "dest": "./static/$1"
+            "src": "/static/style.css",
+            "dest": "./static/style.css"
         },
         {
-            "src": "/templates/(.*)",
-            "dest": "./templates/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/$1"
+            "src": "/templates/index.html",
+            "dest": "./templates/index.html"
         }
+     
     ]
 }
